slide/src/test/ui/error/pattern/const_pat_in_expr.slide
===in
1 + #const
===in

~~~stdout
~~~stdout

~~~stderr
error: Patterns cannot be used in an expression
  |
1 | 1 + #const 
  |     ^^^^^^ unexpected pattern
  |
  = help: consider using "const" as a variable

~~~stderr

~~~exitcode
1
~~~exitcode
